<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:gravity="center"
		android:paddingTop="10dp"
		android:paddingBottom="10dp" >

        <TextView
            android:id="@+id/tvRegisterTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvRegisterUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username" />

    <EditText
        android:id="@+id/etRegisterUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:hint="@string/hint_username">
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvRegisterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password" />

    <EditText
        android:id="@+id/etRegisterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/tvRegisterRepPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rep_pass" />

    <EditText
        android:id="@+id/etRegisterRepPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_rep_pass"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/tvRegisterEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email" />

    <EditText
        android:id="@+id/etRegisterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/tvRegisterRealname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/real_name" />

    <EditText
        android:id="@+id/etRegisterRealName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_real_name"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp" >

        <Button
            android:id="@+id/btn_Register_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="register_cancel"
            android:text="@string/button_cancel" android:width="100dp"/>

        <Button
            android:id="@+id/btn_Register_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="register_confirm"
            android:text="@string/button_confirm" android:width="100dp"/>
    </LinearLayout>

</LinearLayout>