<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="200dp"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/tvLoginUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username" />

    <EditText
        android:id="@+id/etLoginUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:hint="@string/hint_username">
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvLoginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password" />

    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/btn_Login_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="login_cancel"
            android:text="@string/button_cancel" 
            />

        <Button
            android:id="@+id/btn_Login_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="login_confirm"
            android:text="@string/button_confirm" 
			/>
        
    </LinearLayout>

</LinearLayout>