<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:stretchColumns="1">
	    
	  <TableRow>
	
	    <Button
          	android:id="@+id/button_location"
			android:layout_width="0dip"
       		android:layout_height="match_parent"
         	android:layout_weight="1"
            android:onClick="setLocation"
          	android:text="@string/button_location" />
	
		<Button
		    android:id="@+id/button_filters"
			android:layout_width="0dip"
       		android:layout_height="match_parent"
         	android:layout_weight="1"
		    android:onClick="setFilters"
		    android:text="@string/button_filters" />
			
		<Button
		    android:id="@+id/button_search"
			android:layout_width="0dip"
       		android:layout_height="match_parent"
         	android:layout_weight="1"
		    android:onClick="doSearch"
		    android:text="@string/button_search" />
	      
      </TableRow>
	  
	  <TableRow
			android:layout_width="fill_parent"
			android:layout_height="fill_parent" 
			android:layout_weight="1"
	      >

	  	<com.google.android.maps.MapView android:id="@+id/myMapView"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent" 
			android:layout_span="3"
			android:state_enabled="true"
			android:clickable="true"
			android:apiKey="0gjdk_LLAO7DBvxyi1cStKOk64WvCbXlAB08HuA" />

	  </TableRow>
	  
	</TableLayout>
